	Putt v0.2.1:
 - When you show answers, the answers will be seperated by ", ",
    and the last two will be seperated by " or ".
 - Couple of small bigs fixed.
 - Small improvements in the dictionaries.
 - Some tiny changes.


	Putt v0.2:
 - Added score inside a statusbar
 - Changed widget bg colors to normal
 - Both included dictionaries are GREATLY improved
 - Added both settings and help in the menu, an about dialog and two new settings.
 - A dictionary now can (but doesn't need to) have more than one correct answer to a word
 - Several small changes


	Putt v0.1:
 - First version, no changes.